Implemented support for multiple query parameters